fix scrolling on iPhone

--- a/static/css/pages/common.css
+++ b/static/css/pages/common.css
@@ -1,6 +1,5 @@
 html, body {
     max-width: 100%;
-    
 }
 
 .navbar-holder {
@@ -76,6 +75,7 @@ h1 {
   z-index: 1;
   bottom: 0px;
   overflow: hidden;
+  max-width: 100%;
 }
 
 .video-block .video-overlay-poster img {
